# OpenLogReplicator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile.dev  Dockerfile.local  Makefile  PLAN.md  docker-compose.yaml
tests/: CMakeLists.txt  README.md  run-fixtures.sh  test_pipeline.cpp
tests/1-environments/free-23/: Makefile  docker-compose.yaml
tests/1-environments/xe-21/: Makefile  docker-compose.yaml
tests/2-prebuilt/expected/boolean-type/: logminer-reference.json
tests/2-prebuilt/expected/concurrent-updates/: logminer-reference.json  output.json
tests/2-prebuilt/expected/data-types/: output.json
tests/2-prebuilt/expected/interleaved-transactions/: output.json
tests/2-prebuilt/expected/large-transaction/: logminer-reference.json  output.json
tests/2-prebuilt/expected/lob-operations/: logminer-reference.json
tests/2-prebuilt/expected/multi-table/: output.json  (+1 more)
tests/2-prebuilt/redo/: .gitignore
tests/data/: README.md
tests/fixtures/: README.md  compare.py  generate-rac.sh  generate.sh  logminer2json.py
tests/fixtures/lib/: logminer-extract.sql
tests/fixtures/scenarios/: basic-crud.sql  boolean-type.sql  concurrent-updates.sql  data-types.sql  ddl-changes.sql  interleaved-transactions.sql  large-transaction.sql  lob-operations.sql  long-spanning-txn.sql  many-columns.sql  multi-table.sql  null-handling.sql  number-precision.sql  partitioned-table.sql  rollback.sql  special-chars.sql  timestamp-variants.sql  wide-rows.sql
tests/scripts/: generate.sh
tests/scripts/drivers/: docker.sh  local.sh
(+146 files in other folders)
